--- a/html_portfolio/CartoonCharacter.html
+++ b/html_portfolio/CartoonCharacter.html
@@ -44,9 +44,9 @@
                     <div class="header__nav__option">
                         <nav class="header__nav__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="../index.html">Home</a></li>
+                                <li><a href="../index.html">Home</a></li>
                                 <li><a href="../about.html">About</a></li>
-                                <li><a href="../portfolio.html">Portfolio</a></li>
+                                <li class="active"><a href="../portfolio.html">Portfolio</a></li>
                                 <li><a href="../contact.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -109,7 +109,7 @@
                             <h2>Its history</h2>
                         </div>
                         <div class="about__text__desc">
-                            <p>On January 14, 2023, I had an idea. At that time I was looking for what I could do in drawing and what really attracted me. What was my style and what did I want to show?<br>So at a time when I was sleeping, because that's when I have the most ideas, I had a click in my head. An image. The one of a cartoon character that looked like me. After this click, I got up and drew. I drew this cartoon character that had just appeared in my head. After I drew it I officially knew that the cartoon style was the style I wanted to have. <br>So that's the story of this wonderful design that made me realize the style I wanted to have.</p>
+                            <p>On the 14th January 2023, I had an idea. At that time I was looking for what I could do in drawing and what really attracted me. What is my style and what I want to show?<br>So at a time when I was sleeping, because that's when I have the most ideas, I had an inspiration. An image. An image of a cartoon character that looked like me. After, I got up and drew. I drew this cartoon character that had just appeared in my head. After I drew it I officially knew that the cartoon style was the style I wanted to have. <br>So that's the story of this wonderful design that made me realize the style I wanted to have.</p>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="footer__option__item">
                             <h5>About us</h5>
-                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Sain Adrien La Salle.</p>
+                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of Saint Adrien La Salle.</p>
                             <a href="../about.html" class="read__more">Read more <span class="arrow_right"></span></a>
                         </div>
                     </div>
