--- a/html_portfolio/Inktober.html
+++ b/html_portfolio/Inktober.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="./css/style_CartoonCharacter.css" type="text/css">
+    <link rel="stylesheet" href="./css/style_Inktober.css" type="text/css">
 
     <script src="https://kit.fontawesome.com/46047fbeed.js" crossorigin="anonymous"></script>
 </head>
@@ -44,9 +44,9 @@
                     <div class="header__nav__option">
                         <nav class="header__nav__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="../index.html">Home</a></li>
+                                <li><a href="../index.html">Home</a></li>
                                 <li><a href="../about.html">About</a></li>
-                                <li><a href="../portfolio.html">Portfolio</a></li>
+                                <li class="active"><a href="../portfolio.html">Portfolio</a></li>
                                 <li><a href="../contact.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -65,12 +65,12 @@
     <!-- Header End -->
     
     <!-- Breadcrumb Begin -->
-    <div class="breadcrumb-option spad set-bg" data-setbg="img/Bannière.jpg">
+    <div class="breadcrumb-option spad set-bg" data-setbg="./img/Inktober/BannerInktober.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Cartoon Character</h2>
+                        <h2>The challenge Inktober</h2>
                     </div>
                 </div>
             </div>
@@ -87,15 +87,15 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="about__pic__item about__pic__item--large set-bg"
-                                    data-setbg="./img/CartoonCharacterUp.png"></div>
+                                    data-setbg="./img/Inktober/DrakeMini.png"></div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="about__pic__item set-bg" data-setbg="../img/portfolio/CartoonCharacter.png"></div>
+                                        <div class="about__pic__item set-bg" data-setbg="./img/Inktober/VampireMini.png"></div>
                                     </div>
                                     <div class="col-lg-12">
-                                        <div class="about__pic__item set-bg" data-setbg="../img/work/CartoonCharacterProfil.png"></div>
+                                        <div class="about__pic__item set-bg" data-setbg="./img/Inktober/BatMini.png"></div>
                                     </div>
                                 </div>
                             </div>
@@ -105,11 +105,11 @@
                 <div class="col-lg-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <span>About me</span>
-                            <h2>Who I am?</h2>
+                            <span>The challenge Inktober</span>
+                            <h2>Its story</h2>
                         </div>
                         <div class="about__text__desc">
-                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Sain Adrien La Salle.<br>First, at 12, I started computer coding by coding python, javascript. Then during my thirteenth year, I started graphic design by making logos, banners... Finally, at the age of 14, I took a passion for drawing and I learned to draw all by myself. So I arrived here today.<br>Right now my goal is just to get into a digital art school to gain experience and skills to develop myself but after a school like this I would like to become a digital artist in 2D animation. This could be character animation for cartoons but also for commercials.</p>
+                            <p>The Inktober challenge is a challenge created by Jake Parker and its goal is to develop your imagination while drawing every day. This challenge takes place over 1 month and for the themes, we can either choose the themes given officially, or choose those created by another artist or create them ourselves. For this challenge I took the themes of the Inktober of an artist named Yanska on Instagram. So the theme is monsters.<br>The challenge was fun, instructive and exhausting at the same time. Not having much time sometimes, I went to bed very late at night to be able to finish my drawings so due to lack of time I could only do 9 drawings. But this does not prevent me from learning a lot of things with new styles, lights and shadows but also from developing my imagination and discovering a new aspect of drawing.<br>During the challenge, I undertook to draw on the following themes: Leshy, Familiar, Bat, Drake, Ghost, Vampire, Babayaga, Goblin.</p>
                         </div>
                     </div>
                 </div>
@@ -122,75 +122,25 @@
     <section class="work">
         <div class="work__gallery">
             <div class="grid-sizer"></div>
-            <div class="work__item wide__item set-bg" data-setbg="../img/work/Wallpaper.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Monster Cartoon Wallpaper</h4>
-                    <ul>
-                        <li>Monster</li>
-                        <li>Digital drawing</li>
-                    </ul>
-                </div>
+            <div class="work__item small__item set-bg" data-setbg="./img/Inktober/babayaga.png">
             </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/CartoonCharacter.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Cartoon Character</h4>
-                    <ul>
-                        <li>Cartoon</li>
-                        <li>Digital drawing</li>
-                    </ul>
-                </div>
+            <div class="work__item small__item set-bg" data-setbg="./img/Inktober/bat.png">
             </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/CartoonCharacterProfil.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Cartoon character in profile</h4>
-                    <ul>
-                        <li>Cartoon</li>
-                        <li>Digital drawing</li>
-                    </ul>
-                </div>
+            <div class="work__item wide__item set-bg" data-setbg="./img/Inktober/familiar.png">
             </div>
-            <div class="work__item large__item set-bg" data-setbg="../img/work/drake.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Inktober</h4>
-                    <ul>
-                        <li>Monster</li>
-                        <li>Digital Drawing</li>
-                    </ul>
-                </div>
+            <div class="work__item small__item set-bg" data-setbg="./img/Inktober/ghost.png">
             </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/Simple.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Simple Factory</h4>
-                    <ul>
-                        <li>Design</li>
-                        <li>Clothing Virtualy</li>
-                    </ul>
-                </div>
+            <div class="work__item small__item set-bg" data-setbg="./img/Inktober/drake.png">
             </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/GreenTeam.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Green Team</h4>
-                    <ul>
-                        <li>Design</li>
-                        <li>Work</li>
-                    </ul>
-                </div>
+            <div class="work__item small__item set-bg" data-setbg="./img/Inktober/goblin.png">
             </div>
-            <div class="work__item wide__item set-bg" data-setbg="../img/work/BD.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Pencil BD</h4>
-                    <ul>
-                        <li>Digital Drawing</li>
-                        <li>Storyboard</li>
-                    </ul>
-                </div>
+            <div class="work__item small__item set-bg" data-setbg="./img/Inktober/vampire.png">
+            </div>
+            <div class="work__item wide__item set-bg" data-setbg="./img/Inktober/leshy.png">
+            </div>
+            <div class="work__item small__item set-bg" data-setbg="./img/Inktober/phoenix.png">
+            </div>
+            <div class="work__item small__item set-bg" data-setbg="./img/Inktober/Challenge.png">
             </div>
         </div>
     </section>
@@ -221,13 +171,13 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="footer__option__item">
                             <h5>About us</h5>
-                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Sain Adrien La Salle.</p>
+                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of Saint Adrien La Salle.</p>
                             <a href="../about.html" class="read__more">Read more <span class="arrow_right"></span></a>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
                         <div class="footer__option__item">
-                            <h5>Who we are</h5>
+                            <h5>Who I am</h5>
                             <ul>
                                 <li><a href="../contact.html">Contact us</a></li>
                             </ul>
