--- a/html_portfolio/LandscapeCharcoal.html
+++ b/html_portfolio/LandscapeCharcoal.html
@@ -44,9 +44,9 @@
                     <div class="header__nav__option">
                         <nav class="header__nav__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="../index.html">Home</a></li>
+                                <li><a href="../index.html">Home</a></li>
                                 <li><a href="../about.html">About</a></li>
-                                <li><a href="../portfolio.html">Portfolio</a></li>
+                                <li class="active"><a href="../portfolio.html">Portfolio</a></li>
                                 <li><a href="../contact.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -102,7 +102,7 @@
                             <h2>Its history</h2>
                         </div>
                         <div class="about__text__desc">
-                            <p>At Christmas, I was able to get charcoal, a material I had never worked with before. So I tried to use charcoal to make a project out of it, I drew this drawing starting from a tree in the middle of the horizon while being alone and facing the sky.</p>
+                            <p>At Christmas, I was able to get charcoal, a material I had never worked with before. So I tried to use charcoal to make a project out of it, I made this drawing starting from a tree in the middle of the horizon which is alone in the landscape.</p>
                         </div>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="footer__option__item">
                             <h5>About us</h5>
-                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Sain Adrien La Salle.</p>
+                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of Saint Adrien La Salle..</p>
                             <a href="../about.html" class="read__more">Read more <span class="arrow_right"></span></a>
                         </div>
                     </div>
