--- a/html_portfolio/LogoGreenTeam.html
+++ b/html_portfolio/LogoGreenTeam.html
@@ -44,9 +44,9 @@
                     <div class="header__nav__option">
                         <nav class="header__nav__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="../index.html">Home</a></li>
+                                <li><a href="../index.html">Home</a></li>
                                 <li><a href="../about.html">About</a></li>
-                                <li><a href="../portfolio.html">Portfolio</a></li>
+                                <li class="active"><a href="../portfolio.html">Portfolio</a></li>
                                 <li><a href="../contact.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -109,7 +109,7 @@
                             <h2>Its history</h2>
                         </div>
                         <div class="about__text__desc">
-                            <p>In moral and civic education in high school, I had to create a poster for a political party in groups of 4. The political party that we chose to create is a political party on ecology that we named: Green Team. <br>Let's now come to the research of the design. First of all, as the party is on the theme of ecology, I immediately thought of a poster with green colors. Then for the logo, as the leaf is often used to represent something ecological I wanted to use it. So we see the planet Earth with leaves spinning around. The brown color instead of black for the planet Earth allows to bring back a link with the earth.<br>For the second page, I chose to put the logo in big size to put it in front with the texts which surrounds it a little to be able to have this link between the planet and what we say. I also drew small drawings that go with what the text says. </p>
+                            <p>In moral and civic education in high school, I had to create a poster for a political side in groups of 4. The political side we had chosen to create is an ecology politic that we named : Green Team. <br>Let's now introduce the research of the design. First of all, as the side is on the theme of ecology, I immediately thought of a poster with green colors. Then for the logo, as the leaf is often used to represent something ecological I wanted to use it. So we see the planet Earth with leaves spinning around. The brown color instead of black for the planet Earth allows to bring back a link with the earth.<br>For the second page, I chose to put the logo in big size to put it in front with the texts which surrounds it a little to be able to have this link between the planet and what we say. I also made small drawings which are matching with the text.</p>
                         </div>
                     </div>
                 </div>
