--- a/html_portfolio/LogoPlexiglArt.html
+++ b/html_portfolio/LogoPlexiglArt.html
@@ -44,9 +44,9 @@
                     <div class="header__nav__option">
                         <nav class="header__nav__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="../index.html">Home</a></li>
+                                <li><a href="../index.html">Home</a></li>
                                 <li><a href="../about.html">About</a></li>
-                                <li><a href="../portfolio.html">Portfolio</a></li>
+                                <li class="active"><a href="../portfolio.html">Portfolio</a></li>
                                 <li><a href="../contact.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -102,7 +102,7 @@
                             <h2>Its history</h2>
                         </div>
                         <div class="about__text__desc">
-                            <p>I have a friend who had an idea, that of creating Led lamps by engraving an image on a plexiglass plate and creating a base to hold this plate and also to be able to insert leds in order to illuminate the engraved drawing. He plans to sell these leds. <br>To facilitate communication, he needed a logo, designs and a name. By searching in our head, we found a name: Plexigl'Art.<br>After finding a name, we looked for the logo.  We needed a simple and effective logo that would fit into the base of the lamp and reflect the project. So we did a lot of testing and came up with a nozzle that draws the main letters of the logo.</p>
+                            <p>I have a friend who had an idea. It wad create Led lamps by engraving an image on a plexiglass plate and creating a base to hold this plate and also to be able to insert leds in order to illuminate the engraved drawing. He plans to sell these leds. <br>To facilitate communication, he needed a logo, designs and a name. By searching in our head, we found a name: Plexigl'Art.<br>After finding a name, we looked for the logo.  We needed a simple and effective logo that would fit into the base of the lamp and reflect the project. So we did many tries and came up with a nozzle that draws the main letters of the logo.</p>
                         </div>
                     </div>
                 </div>
